--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,9 +21,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="danielrosillo.github.io"
         android:autoLink="web"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:text="github.com/DanielRosillo"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <LinearLayout
